--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,23 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta/>
+
+    <meta name="description" content="Full-Stack Developer">
+    <meta property="og:title" content="Fabio Trajano - Full-Stack Developer" />
+    <meta property="og:url" content="https://www.fabiotrajano.com/"/>
+    <meta property="og:description" content="Web developer based in Porto, Portugal." />
+    <meta property="og:image" content="https://raw.githubusercontent.com/fabio-trajano/my-portfolio-react/master/public/image-og.png" />
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-    <title>Fabio Trajano</title>
+    <title>Fabio Trajano - Developer</title>
   </head>
 
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 
