--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Full-Stack Developer">
     <meta property="og:title" content="Fabio Trajano - Full-Stack Developer" />
     <meta property="og:url" content="https://www.fabiotrajano.com/"/>
-    <meta property="og:description" content="Web developer based in Porto, Portugal." />
+    <meta property="og:description" content="Software developer based in Porto, Portugal." />
     <meta property="og:image" content="https://raw.githubusercontent.com/fabio-trajano/my-portfolio-react/master/public/image-og.png" />
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
